# wood_cutter

./: Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml  rust.yml
HTML/: BoardCutter.html  mock-board.txt  mock_board.txt
archive/: algorithms.rs  main.rs  steps.rs
src/: app.rs  main.rs
src/algorithms/: bottom_left.rs  ga.rs  guillotine.rs  maxrects.rs  mod.rs  nfp_greedy.rs  sa.rs  svgnest.rs
src/core/: board.rs  mod.rs  placement.rs  shape.rs
src/steps/: generator.rs  mod.rs
src/types/: algo_id.rs  compute_state.rs  mod.rs  shape_entry.rs
src/ui/: components.rs  draw.rs  header.rs  menu.rs  mod.rs  theme.rs
src/utils/: icon.rs  mod.rs  parsers.rs
