[package]
name = "wood_cutter"
version = "0.1.0"
edition = "2024"
description = "木板分割 - NFP · GA · SA · SVGNest · MaxRects"

[[bin]]
name = "wood_optimizer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = "0.29"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
